--- a/front/homework_audit.html
+++ b/front/homework_audit.html
@@ -53,7 +53,7 @@
                 <th scope="col">評語</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody_shw">
                 <tr>
                     <th scope="row">1</th>
                     <td>學生 1</td>
@@ -114,5 +114,73 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  
+  
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    
+    <script>
+    // 取得get
+    var hw_id = getParameter("hw_id");
+    console.log(hw_id);
+
+    function getParameter(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+
+
+
+    // 顯示作業資訊
+    $.ajax({
+        url: "http://140.124.183.30:8080/SE_pj/api/login",
+        data: {
+            'hw_id': hw_id
+        },
+        type:"POST",
+        dataType:'json',
+
+        success: function(JData){
+            console.log('成功');
+            console.log(JData);
+
+            $("#tbody_shw").empty();
+            var i = 0;
+            $.each(JData, function() {
+              $("#tbody_shw").append("<tr><th scope=\"row\">3</th><td>學生 3</td><td>2017/10/19 16:20:00</td><td class=\"text-success\">已上傳</td><td><a class=\"btn btn-info\" href=\"\">下載</a></td><td><input type=\"number\" class=\"form-control\" value=\"76\"></td><td><input type=\"text\" class=\"form-control\" value=\"部分不符合題目需求\"></td></tr>");
+              i++;
+            });
+        },
+
+        error: function(xhr, ajaxOptions, thrownError){
+            console.log('失敗');
+            console.log(xhr.responseText);
+            console.log(xhr.status);
+            console.log(thrownError);
+        }
+    });
+
+
+
+
+
+
+
+
+
+
+    $("#btn_submit").click(function(){
+
+    });
+
+    
+    </script>
+  
+  
   </body>
 </html>
