--- a/front/SubmitHomework.html
+++ b/front/SubmitHomework.html
@@ -146,7 +146,7 @@
 
       // 取得作業清單
       $.ajax({
-        url: "http://140.124.183.30:8080/SE_pj/api/hw",
+        url: "http://140.124.183.30:8080/SE_pj/api/hwDetail",
         data: {
           'member_id': user.id,
           'course_id': course_id
