--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -121,7 +121,7 @@
 
     // 顯示作業資訊
     $.ajax({
-        url: "http://140.124.183.30:8080/SE_pj/api/login",
+        url: "http://140.124.183.30:8080/SE_pj/api/unitHwContent",
         data: {
             'hw_id': hw_id
         },
