--- a/front/HomeworkManagement.html
+++ b/front/HomeworkManagement.html
@@ -48,9 +48,9 @@
                 </div>
             </div>
             <div class="col-10">
-                <div>
+                <!-- <div>
                   <p>助教: 助教A <a href="">(設定)</a></p>
-                </div>
+                </div> -->
                 <table class="table table-hover table-bordered">
                 <thead>
                     <tr>
@@ -69,8 +69,8 @@
                     <td>HomeWork 1</td>
                     <td>2017/10/30</td>
                     <td class="text-success">開放</td>
-                    <td><a class="btn btn-info" href="homework_audit.html">審核</a></td>
-                    <td><a class="btn btn-info" href="homework_report.html">檢視</a></td>
+                    <td><a class="btn btn-info" href="homework_audit.html?hw_id=1">審核</a></td>
+                    <td><a class="btn btn-info" href="homework_report.html?hw_id=1">檢視</a></td>
                     <td><a class="btn btn-info" href="">編輯</a></td>
                     </tr>
                     <tr>
